--- a/about.html
+++ b/about.html
@@ -107,7 +107,21 @@ Then, I assembled it for JavaScript.  I release my changes into the public domai
 </li>
 <li>Various icons, from <a href="http://www.famfamfam.com/lab/icons/silk/">FamFamFam.com</a>, licensed under the <a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 License</a>.</li>
 <li>Several lines marked in the code, taken from a programming website.  I think these are uncopyrightable minimal creativity, but I list it to be complete.</li>
-<li>The rest of the program, copyright 2008 William Condon.  Effective when this program is posted on the World Wide Web:
+<li>The rest of the program, copyright 2008 William Condon.  It is currently licensed under <a href=
+"http://www.opensource.org/licenses/mit-license.php">the Expat License, sometimes referred to as the MIT License</a>.  This is compatible with almost any other license in existence, including the GNU Public License.
+<p>
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+</p>
+
+
+<!-- NOTE:  I originally planned to license it under the GNU Public License.  That would be: -->
+<!-- Effective when this program is posted on the World Wide Web:
 <p>
     The CalcuType is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -117,7 +131,9 @@ Then, I assembled it for JavaScript.  I release my changes into the public domai
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     <a href="http://www.gnu.org/copyleft/gpl.html">GNU General Public License</a> for more details.
-</p></li></ul></div>
+</p>
+-->
+</li></ul></div>
 
 <!-- Basically, this means you can do whatever you want as long as you link to my original version (and the GNU License), license your derivative copy under the GNU General Public License, and let people have the source code for your derivative copy. -->
 </body>
