--- a/jscalc.html
+++ b/jscalc.html
@@ -32,6 +32,7 @@ textarea { font-size: 30px;
 
 <script type="text/javascript" src="files/common.js"></script>
 <script type="text/javascript" src="files/Gutenberg 10,000.js"></script>
+<script type="text/javascript" src="files/wiki570academicsupp.js"></script>
 <script type="text/javascript">
 <!--
 var focused;
@@ -46,11 +47,6 @@ var repeat = 2;
 var currentIndex = 0; //start with first member of arrayGroup highlighted
 
 //The keyboard row that's different...
-var punct = new Array('[<img src="files/resultset_previous.png" alt="retreat one letter" />',
- '[<img src="files/resultset_next.png" alt="advance one letter" />',
- '[<img src="files/resultset_first.png" alt="retreat one word" />', 
- '[<img src="files/resultset_last.png" alt="advance one word" />', 
-'.', ',', '?', '"', '`', '!', ':', '$');
 
 var funct = new Array('[&para;', '[<img src="files/drive_disk.png" alt="save" />',
  '[<img src="files/alpha.png" alt="cap" />', '[&laquo;]','[&laquo;w]');
