--- a/mathdemo.html
+++ b/mathdemo.html
@@ -25,7 +25,7 @@
 <br /><textarea cols="20" rows="5" name="algebra" id="algebra"></textarea>
 </p>
 
-<p>In a right triangle, one angle is 50 degrees and the hypotinuse has length 10 meters.  What are the lengths of the two legs?
+<p>In a right triangle, one angle is 50 degrees and the hypotenuse has length 10 meters.  What are the lengths of the two legs?
 <br /><input type="text" name="leg1" /> meters
 <br /><input type="text" name="leg2" /> meters
 </p>
