--- a/trunk/about.html
+++ b/trunk/about.html
@@ -26,7 +26,7 @@
 
 <hr />
 <h2 id="typing">Typing</h2>
-<p>Every key on the keyboard works as normal, except for three keys I had to disable to support the "virtual keyboard."  That is, if you're able to use a keyboard normally, you may.  Alternatively, every letter and digit, the normal four operators ("+", "-", "*", "/"), the equals sign, the carriage return, and many other symbols are in the virtual keyboard.</p>
+<p>Every key on the keyboard works as normal, except for three keys I had to disable to support the virtual keyboard.  That is, if you're able to use a keyboard normally, you may.  Alternatively, every letter and digit, the normal four operators ("+", "-", "*", "/"), the equals sign, the carriage return, and many other symbols are in the virtual keyboard.</p>
 <table class="data-table">
 <tr><th></th><th>Default Values of Special Keys. <br /> (All special keys can be reset on the <a href="options.html">options page.</a>)</th></tr>
 <tr><td style="font-size:200%;"> ] </td>
@@ -81,10 +81,10 @@ a list of the 10000 most commonly used words in the <a href="http://www.gutenber
 <tr><td>&laquo;</td><td>Backspace.  (Deletes the last letter you typed.)</td></tr>
 <tr><td>&laquo;w</td><td>Backspace through word.  (Deletes everything between the cursor and the last space before the cursor.)</td></tr>
 <tr><td>&para;</td><td>Carriage return.  (Equivalent to pressing 'enter' in a normal text editor.)</td></tr>
-<tr><td>[<img src="files/resultset_previous.png" alt="retreat one letter" /></td><td>Moves the cursor backward one letter.</td></tr>
-<tr><td>[<img src="files/resultset_next.png" alt="advance one letter" /></td><td>Moves the cursor forward one letter.</td></tr>
-<tr><td>[<img src="files/resultset_first.png" alt="retreat one word" /></td><td>Moves the cursor backward one word.</td></tr>
-<tr><td>[<img src="files/resultset_last.png" alt="advance one word" /></td><td>Moves the cursor forward one word.</td></tr>
+<tr><td>[<img src="files/previous.png" alt="retreat one letter" /></td><td>Moves the cursor backward one letter.</td></tr>
+<tr><td>[<img src="files/next.png" alt="advance one letter" /></td><td>Moves the cursor forward one letter.</td></tr>
+<tr><td>[<img src="files/first.png" alt="retreat one word" /></td><td>Moves the cursor backward one word.</td></tr>
+<tr><td>[<img src="files/last.png" alt="advance one word" /></td><td>Moves the cursor forward one word.</td></tr>
 <tr><td>[<img src="files/alpha.png" alt="cap" /></td><td>Turns caps lock on or off. <br /> When caps lock is on, the virtual keyboard types capital letters; when caps lock is off, it types lowercase letters.</td></tr>
 <tr><td>[store</td><td>Stores the last word before the cursor in memory (that is, stores everything between the cursor and the last space before the cursor).</td></tr>
 <tr><td>[<img src="files/drive_disk.png" alt="save" /></td><td>Copies what you've written into a new file, ready to be saved on your local computer.<br /><i>You must be connected to the Web to use this.</i></td></tr>
