--- a/trunk/framebuilder.html
+++ b/trunk/framebuilder.html
@@ -28,13 +28,7 @@ var currentIndex = 0; //start with first member of arrayGroup highlighted
 var startLoaded = "about.html#typing"
 
 //The keyboard row that's different...
-var funct = new Array('[&#8594;', '[&para;', '[new', '[<img src="alpha.png" alt="cap" />', '[&laquo;]','[&laquo;w]');
-
-var punct = new Array('[<img src="resultset_previous.png" alt="retreat one letter" />',
- '[<img src="resultset_next.png" alt="advance one letter" />',
- '[<img src="resultset_first.png" alt="retreat one word" />', 
- '[<img src="resultset_last.png" alt="advance one word" />', 
-'.', ',', '?', '"', '`', '!', ':', '$');
+var funct = new Array('[&#8594;', '[&para;', '[new', '[<img src="files/alpha.png" alt="cap" />', '[&laquo;]','[&laquo;w]');
 
 
 
@@ -159,7 +153,7 @@ function readyForm() {
 <title>Calcutype:  Fill out your own forms!</title>
 </head>
 <frameset cols = "40%,60%">
-<frame src = "files/jsinframe.html" name = "typer" id="typer" />
+<frame src = "jsinframe.html" name = "typer" id="typer" />
 <frame src = "about.html#typing" name = "form" id="form" />
 <noframes>
 <body>
