--- a/trunk/index.html
+++ b/trunk/index.html
@@ -9,23 +9,42 @@
 </head>
 <body>
 <h1>CalcuType</h1>
-<p><i>Current version:  0.66.  This program is still under development - any feedback will be greatly appreciated!</i>
-<br />Written 2008, William Condon, with Dr. Gary Bishop <i>(<a href="mailto:gb@cs.unc.edu">Email</a>)</i>
-<br /><strong style="text-align:center">Requires JavaScript enabled on your browser!</strong> 
-<i><script type="text/javascript">document.write("You currently have JavaScript enabled on your browser.");</script></i>
-</p>
-<h1 id="collapse" style="color:red;">JavaScript is not properly enabled in your browser!</h1>
+<blockquote style="font-style:italic;"><p>We're still working on this program.  Please <a href="mailto:gb@cs.unc.edu">let us know what you think of it</a>!  Thanks!
+<br />&mdash;William Condon
+<br />&mdash;Dr. Gary Bishop</p>
+</blockquote>
+<h1 id="collapse" style="color:red;">We're sorry.  You cannot use the CalcuType until you enable JavaScript on your browser.</h1>
 <script type="text/javascript">document.getElementById("collapse").style.visibility = 'hidden';</script>
 
 <hr />
-<h1>Go directly to the CalcuType:</h1>
-<ul><li><a href="options.html">Options page</a></li>
-<li><a href="jscalc.html">Start your own document</a></li>
-<li><a href="framebuilder.html">Fill in a form</a>
+<h1>Start using the CalcuType:</h1>
+<ul><li><a href="options.html">Set the CalcuType as you like it!</a></li>
+<li><a href="jscalc.html">Write a document!</a></li>
+<li><a href="framebuilder.html">Fill in a form!</a>
 <ul><li><a href="framebuilder.html?UseTwoSwitchTyping=true&timerLength=1000&SWITCH1=221&SWITCH2=219&SWITCH3=220&use_rad=true&precision=3&mem_lets=4&H_COL=#cc6600&TAREA_COL=white&KEY_SIZE=40&repeat=3&reset=true&TEXT_SIZE=30&Alphabet=ABC&startLoaded=mathdemo.html&addi=">
 Try completing a math homework sheet using the CalcuType</a></li></ul></li>
-<li><a href="about.html">Detailed description</a></li>
+<li><a href="about.html">Read a longer description</a></li>
 </ul>
+<hr />
+<h1>What Can I Do?</h1>
+<p>You can write a document!  You can do math!  You can do both at once!</p>
+<ul>
+<li>To write a document, either:
+<ul><li>Click on a letter in the virtual keyboard.</li>
+<li>Select the row and column by using the <code>[]</code> keys.</li>
+<li>Type the letter on the normal computer keyboard.</li></ul>
+It will show up in the document at right, just as if someone typed it on the normal computer keyboard.
+</li>
+<li>To do math:
+<ol><li>Start typing a math problem using the virtual keyboard (or normal computer keyboard).</li>
+<li>The answer will show up in the upper left corner of the virtual keyboard.</li>
+<li>Either select it from the virtual keyboard as normal, or hit the <code>\</code> key.</li></ol>
+</li>
+<li><a href="about.html#typing">Read more about writing a document in the CalcuType.</a></li>
+<li><a href="about.html#math">Read more about doing math in the CalcuType.</a></li>
+</ul>
+
+
 <hr />
 <h1>Inspiration</h1>
 <p>	Motor-disabled people are often unable to use a computer keyboard, which prevents them from accessing most computer functions.  However, they can often use simple buttons or joysticks with an onscreen "virtual keyboard."  In addition, learning-disabled people often need a simple typing program with word-completion to enable them to write much better.</p>
