--- a/trunk/jscalc.html
+++ b/trunk/jscalc.html
@@ -48,8 +48,8 @@ var currentIndex = 0; //start with first member of arrayGroup highlighted
 
 //The keyboard row that's different...
 
-var funct = new Array('[&para;', '[<img src="files/drive_disk.png" alt="save" />',
- '[<img src="files/alpha.png" alt="cap" />', '[&laquo;]','[&laquo;w]');
+var funct = new Array('<img src="files/pilcrow.png" alt="&para;" />', '<img src="files/drive_disk.png" alt="save" />',
+ '<img src="files/alpha.png" alt="cap" />', '<img src="files/backspace.png" alt="backspace" />','<img src="files/backspace_w.png" alt="backspace one word" />');
  var intarea = false;
 
 var NOW_SCANNING = true //I don't know why it'd ever be false, but it's here in case we need it!
