Replaced all option keys except [store with pictures.  Also enabled users to save forms from framebuilder.html

--- a/about.html
+++ b/about.html
@@ -76,18 +76,18 @@ a list of the 10000 most commonly used words in the <a href="http://www.gutenber
 <table class="data-table">
 <tr><td>&pi;</td><td><ul><li>The Greek letter pi.</li> <li>The ratio of a circle's circumference to its diameter.</li><li>Approximately
 <script type="text/javascript">document.write(Math.PI);</script></li></ul></td></tr>
-<tr><td>&#8594;</td><td>Advance the cursor to the next box in the form.</td></tr>
-<tr><td>[new</td><td>Load a new form.</td></tr>
-<tr><td>&laquo;</td><td>Backspace.  (Deletes the last letter you typed.)</td></tr>
-<tr><td>&laquo;w</td><td>Backspace through word.  (Deletes everything between the cursor and the last space before the cursor.)</td></tr>
-<tr><td>&para;</td><td>Carriage return.  (Equivalent to pressing 'enter' in a normal text editor.)</td></tr>
-<tr><td>[<img src="files/previous.png" alt="retreat one letter" /></td><td>Moves the cursor backward one letter.</td></tr>
-<tr><td>[<img src="files/next.png" alt="advance one letter" /></td><td>Moves the cursor forward one letter.</td></tr>
-<tr><td>[<img src="files/first.png" alt="retreat one word" /></td><td>Moves the cursor backward one word.</td></tr>
-<tr><td>[<img src="files/last.png" alt="advance one word" /></td><td>Moves the cursor forward one word.</td></tr>
-<tr><td>[<img src="files/alpha.png" alt="cap" /></td><td>Turns caps lock on or off. <br /> When caps lock is on, the virtual keyboard types capital letters; when caps lock is off, it types lowercase letters.</td></tr>
+<tr><td><img src="files/tab.png" alt="tab" /></td><td>Advance the cursor to the next box in the form.</td></tr>
+<tr><td><img src="files/new-form.PNG" alt="new form" /></td><td>Load a new form.</td></tr>
+<tr><td><img src="files/backspace.png" alt="backspace" /></td><td>Backspace.  (Deletes the last letter you typed.)</td></tr>
+<tr><td><img src="files/backspace_w.png" alt="backspace one word" /></td><td>Backspace through word.  (Deletes everything between the cursor and the last space before the cursor.)</td></tr>
+<tr><td><img src="files/pilcrow.png" alt="carriage return" /></td><td>Carriage return.  (Equivalent to pressing 'enter' in a normal text editor.)</td></tr>
+<tr><td><img src="files/previous.png" alt="retreat one letter" /></td><td>Moves the cursor backward one letter.</td></tr>
+<tr><td><img src="files/next.png" alt="advance one letter" /></td><td>Moves the cursor forward one letter.</td></tr>
+<tr><td><img src="files/first.png" alt="retreat one word" /></td><td>Moves the cursor backward one word.</td></tr>
+<tr><td><img src="files/last.png" alt="advance one word" /></td><td>Moves the cursor forward one word.</td></tr>
+<tr><td><img src="files/alpha.png" alt="cap" /></td><td>Turns caps lock on or off. <br /> When caps lock is on, the virtual keyboard types capital letters; when caps lock is off, it types lowercase letters.</td></tr>
 <tr><td>[store</td><td>Stores the last word before the cursor in memory (that is, stores everything between the cursor and the last space before the cursor).</td></tr>
-<tr><td>[<img src="files/drive_disk.png" alt="save" /></td><td>Copies what you've written into a new file, ready to be saved on your local computer.<br /><i>You must be connected to the Web to use this.</i></td></tr>
+<tr><td><img src="files/drive_disk.png" alt="save" /></td><td>Copies what you've written into a new file, ready to be saved on your local computer.<br /><i>You must be connected to the Web to use this.</i></td></tr>
 </table>
 
 
