--- a/framebuilder.html
+++ b/framebuilder.html
@@ -28,7 +28,7 @@ var currentIndex = 0; //start with first member of arrayGroup highlighted
 var startLoaded = "about.html#typing"
 
 //The keyboard row that's different...
-var funct = new Array('[&#8594;', '[&para;', '[new', '[<img src="files/alpha.png" alt="cap" />', '[&laquo;]','[&laquo;w]');
+var funct = new Array('<img src="files/tab.png" alt="tab" />', '<img src="files/pilcrow.png" alt="&para;" />', '<img src="files/new-form.png" alt="new" />', '<img src="files/drive_disk.png" alt="save" />', '<img src="files/alpha.png" alt="cap" />', '<img src="files/backspace.png" alt="backspace" />','<img src="files/backspace_w.png" alt="backspace one word" />');
 
 
 
@@ -80,6 +80,15 @@ function advanceFocus() {
   catch(except) {
     textboxes[0].focus();
   }
+}
+function writeToServer() {
+  for(var i = 0; i < textboxes.length; i++) {
+    var newNode = frames['form'].document.createTextNode(textboxes[i].value);
+    textboxes[i].parentNode.replaceChild(newNode, textboxes[i] )
+  }
+  var allContent = frames['form'].document.getElementsByTagName('html')[0];
+  typer.body.innerHTML += '<form action="http://neverland.ncssm.edu/~condonw/Java/htmlmirror.php" id="bootstrapform" method="post"><textarea id="allHTML" name="allHTML">' + allContent.innerHTML + '</textarea></form>'
+  typer.getElementById('bootstrapform').submit();
 }
 
 function loadNewForm(newurl) {
