--- a/trunk/about.html
+++ b/trunk/about.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <h1>About the Calcutype</h1>
-<p>Calcutype, version 0.66
-<br />Written 2008, William Condon, with Dr. Gary Bishop <i>(<a href="mailto:gb@cs.unc.edu">Email</a>)</i>
+<p>Calcutype, version 0.7
+<br />Written 2008-2009, William Condon, with Dr. Gary Bishop <i>(<a href="mailto:gb@cs.unc.edu">Email</a>)</i>
 <br /><strong style="text-align:center">Note:  JavaScript must be enabled to use this program!</strong> 
 <i><script type="text/javascript">document.write("JavaScript is currently enabled on your browser.");</script></i>
 <br />This program is still under development... any feedback will be greatly appreciated!
@@ -46,10 +46,7 @@
 <hr />
 <h2 id="completion">Word Completion</h2>
 <p>Word completion is still in a fairly primitive state right now.  We're riding off
-
-<!-- a semi-organized, semi-alphabetized list from <a href="http://www.paulnoll.com/Books/Clear-English/English-3000-common-words.html"> Paul Noll's website</a>.  (<a href="mailto:pn@paulnoll.com">Contact</a>). -->
-
-a list of the 10000 most commonly used words in the <a href="http://www.gutenberg.org">Project Gutenberg</a> electronic books, taken from <a href="http://en.wiktionary.org/wiki/Wiktionary:Frequency_lists/Project_Gutenberg_1-10000">Wiktionary</a>.  Basically, the program automatically puts into memory the first three words in the list whose first letters match what you're typing.</p>
+a list of the 10000 most commonly used words in the <a href="http://www.gutenberg.org">Project Gutenberg</a> electronic books, taken from <a href="http://en.wiktionary.org/wiki/Wiktionary:Frequency_lists/Project_Gutenberg_1-10000">Wiktionary</a>.  To this is added a list of the <q>570 word families which were selected because they appear with great frequency in a broad range of academic texts</q>, also taken from <a href="http://simple.wiktionary.org/wiki/Wiktionary:Academic_word_list">Wictionary</a>.  Basically, the program automatically puts into memory the first three words in the list whose first letters match what you're typing.</p>
 
 <hr />
 <h2 id="math">Math Support</h2>
@@ -107,9 +104,17 @@ Then, I assembled it for JavaScript.  I release my changes into the public domai
 </li>
 <li>Various icons, from <a href="http://www.famfamfam.com/lab/icons/silk/">FamFamFam.com</a>, licensed under the <a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 License</a>.</li>
 <li>Several lines marked in the code, taken from a programming website.  I think these are uncopyrightable minimal creativity, but I list it to be complete.</li>
-<li>The rest of the program, copyright 2008 William Condon.  It is currently licensed under <a href=
-"http://www.opensource.org/licenses/mit-license.php">the Expat License, sometimes referred to as the MIT License</a>.  This is compatible with almost any other license in existence, including the GNU Public License.
+<li>The rest of the program, copyright (c) 2008-2009, Mr. William Condon and Dr. Gary Bishop.  It is currently licensed under <a href="http://www.opensource.org/licenses/mit-license.php">the Expat License, sometimes referred to as the MIT License</a>.  This is compatible with almost any other license in existence, including the GNU Public License.
 <p>
+Copyright (c) 2008-2009, Mr. William Condon and Dr. Gary Bishop.<br />
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+</p><p>
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -120,21 +125,7 @@ THE SOFTWARE.
 </p>
 
 
-<!-- NOTE:  I originally planned to license it under the GNU Public License.  That would be: -->
-<!-- Effective when this program is posted on the World Wide Web:
-<p>
-    The CalcuType is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 2 of the License, or
-    (at your option) any later version.
-    The CalcuType is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    <a href="http://www.gnu.org/copyleft/gpl.html">GNU General Public License</a> for more details.
-</p>
--->
 </li></ul></div>
 
-<!-- Basically, this means you can do whatever you want as long as you link to my original version (and the GNU License), license your derivative copy under the GNU General Public License, and let people have the source code for your derivative copy. -->
 </body>
 </html>
