--- a/trunk/index.html
+++ b/trunk/index.html
@@ -42,6 +42,7 @@ It will show up in the document at right, just as if someone typed it on the nor
 </li>
 <li><a href="about.html#typing">Read more about writing a document in the CalcuType.</a></li>
 <li><a href="about.html#math">Read more about doing math in the CalcuType.</a></li>
+<li><a href="about.html#symbols">Read more about different ways to do things in the CalcuType.</a></li>
 </ul>
 
 
