--- a/jscalc.html
+++ b/jscalc.html
@@ -111,7 +111,7 @@ function checkSize() {
 <body onkeydown="keyPressed(event);" onclick="keyPressed(null, -2);" onload="checkSize(); highlight(0); document.getElementById('maintext').focus(); focused = document.getElementById('maintext'); if(!UseTwoSwitchTyping) runTimer();">
 <p id="log"></p>
 
-<form action="http://gb-cs.cs.unc.edu/tmp/plaintextmirror.php" id="theform" method="post">
+<form action="http://gb-cs.cs.unc.edu/calcutype/files/plaintextmirror.php" id="theform" method="post">
 
 <p style="width: 55%; float: right; margin-top:60px;">
 <script type="text/javascript">
