Fixed various references

--- a/jsinframe.html
+++ b/jsinframe.html
@@ -74,9 +74,9 @@ for(var i=0; i < parent.arrayGroup.length-1; i++) {
 //-->
 </script>
 <h1>Caps lock is <span id="caplock">ON</span></h1>
-<p id="loader" style="background-color: #cc6600; font-size: 150%;">Type URL or filename of the form to load, including any filename extensions. When finished, select "[new" to load this file or webpage. <br />
+<table><tr id="loader" style="background-color: #cc6600; font-size: 150%;"><td>Type URL or filename of the form to load, including any filename extensions, and then select <img src="files/new-form.png" alt="new" height="20" />. <br />
 <input type="text" id="url" name="url" onkeydown="parent.keyPressed(event);" style="width:90%" />
-</p>
+</td></tr></table>
 </body>
 </html>
 <!-- &#8658; -->
