--- a/framebuilder.html
+++ b/framebuilder.html
@@ -28,7 +28,7 @@ var currentIndex = 0; //start with first member of arrayGroup highlighted
 var startLoaded = "about.html#typing"
 
 //The keyboard row that's different...
-var funct = new Array('<img src="files/tab.png" alt="tab" />', '<img src="files/pilcrow.png" alt="&para;" />', '<img src="files/new-form.png" alt="new" />', '<img src="files/drive_disk.png" alt="save" />', '<img src="files/alpha.png" alt="cap" />', '<img src="files/backspace.png" alt="backspace" />','<img src="files/backspace_w.png" alt="backspace one word" />');
+var funct = new Array('<img src="files/tab.png" alt="tab" />', '<img src="files/pilcrow.png" alt="&para;" />', '<img src="files/new-form.PNG" alt="new" />', '<img src="files/drive_disk.png" alt="save" />', '<img src="files/alpha.png" alt="cap" />', '<img src="files/backspace.png" alt="backspace" />','<img src="files/backspace_w.png" alt="backspace one word" />');
 
 
 
