--- a/trunk/about.html
+++ b/trunk/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>About the Calcutype</h1>
-<p>Calcutype, version 0.7
+<p>Calcutype, version 0.71
 <br />Written 2008-2009, William Condon, with Dr. Gary Bishop <i>(<a href="mailto:gb@cs.unc.edu">Email</a>)</i>
 <br /><strong style="text-align:center">Note:  JavaScript must be enabled to use this program!</strong> 
 <i><script type="text/javascript">document.write("JavaScript is currently enabled on your browser.");</script></i>
@@ -47,6 +47,7 @@
 <h2 id="completion">Word Completion</h2>
 <p>Word completion is still in a fairly primitive state right now.  We're riding off
 a list of the 10000 most commonly used words in the <a href="http://www.gutenberg.org">Project Gutenberg</a> electronic books, taken from <a href="http://en.wiktionary.org/wiki/Wiktionary:Frequency_lists/Project_Gutenberg_1-10000">Wiktionary</a>.  To this is added a list of the <q>570 word families which were selected because they appear with great frequency in a broad range of academic texts</q>, also taken from <a href="http://simple.wiktionary.org/wiki/Wiktionary:Academic_word_list">Wictionary</a>.  Basically, the program automatically puts into memory the first three words in the list whose first letters match what you're typing.</p>
+<p style="font-style:italic; font-weight:bold;">Click here to <a href="files/wordlistmaker.html">add your own words to the word list</a>.  (CalcuType must be downloaded to your local computer to use this feature.)</p>
 
 <hr />
 <h2 id="math">Math Support</h2>
