--- a/jscalc.html
+++ b/jscalc.html
@@ -128,40 +128,31 @@ document.write('onclick="killEvent(event);"></textarea>');
 <script type="text/javascript">   
 <!--
   var width = 1280;
-  var i = arrayGroup.length-1;
-  document.write('<tr id="cell-1' + i + '">');
-  for(var j = 0;j<arrayGroup[i].length;j++) {
-    document.write('<td id="cell' + i + j + '" style="border:solid #000000 1px">');
-    document.write('<a onClick="fromMemory(' + j + ');" href="javascript:;" id="anchor' + i + j + '" style="font-size: '+ KEY_SIZE + 'px;">' + arrayGroup[i][j] + '</a>');
+  document.write('<tr id="cell-1' + indexOf(arrayGroup, memory) + '">');
+  for(var memdex = 0; memdex < memory.length; memdex++) {
+    document.write('<td id="cell' + indexOf(arrayGroup, memory)  + memdex + '" style="border:solid #000000 1px">');
+    document.write('<a onClick="fromMemory(' + memdex + ');" href="javascript:;" id="anchor' + indexOf(arrayGroup, memory)  + memdex + '" style="font-size: '+ KEY_SIZE + 'px;">' + memory[memdex] + '</a>');
     document.write('<img src="files/spacer.GIF" width="' + width/85 + 'px" height="0px" /></td>');
   }
-  for(var k = arrayGroup[i].length; k < MAX_ARRAY_LENGTH; k++) {
-    document.write('<td id="cell' + i + k);
+  for(var memplus = memory.length; memplus < MAX_ARRAY_LENGTH; memplus++) {
+    document.write('<td id="cell' + indexOf(arrayGroup, memory) + memplus);
     document.write('" style="border:solid #000000 1px');
-    document.write('" ><a onClick="fromMemory(' + j + ');" href="javascript:;" id="anchor' +i+k+'" style="font-size: '+ KEY_SIZE + 'px;"></a>');
+    document.write('" ><a onClick="fromMemory(' + memplus + ');" href="javascript:;" id="anchor' +indexOf(arrayGroup, memory)+memplus+'" style="font-size: '+ KEY_SIZE + 'px;"></a>');
    document.write('<img src="files/spacer.GIF" width="' + width/85 + 'px" height="0px" />');
   }
     document.write('</td></tr></table>');
-var bord = false;
-for(var i=0; i < arrayGroup.length-1; i++) {
-  if(i == (arrayGroup.length - 1)) bord = true;
-  document.write('<table  class="data-table"><tr id="cell-1' + i + '">');
-  for(var j = 0;j<arrayGroup[i].length;j++) {
-    document.write('<td id="cell' + i + j);
-    if(bord == true) document.write('" style="border:solid #000000 1px');
-    document.write('"><a onClick="selectletter(this.innerHTML);" href="javascript:;" id="anchor' + i + j + '" style="font-size: '+ KEY_SIZE + 'px;">' + arrayGroup[i][j] + '</a>');
+
+for(var agindex=0; agindex < arrayGroup.length-1; agindex++) {
+  document.write('<table class="data-table"><tr id="cell-1' + agindex + '">');
+  for(var acol = 0; acol<arrayGroup[agindex].length; acol++) {
+    document.write('<td id="cell' + agindex + acol);
+    document.write('"><a onClick="selectletter(this.innerHTML);" href="javascript:;" id="anchor' + agindex + acol + '" style="font-size: '+ KEY_SIZE + 'px;">' + arrayGroup[agindex][acol] + '</a>');
     document.write('<img src="files/spacer.GIF" width="' + width/85 + 'px" height="0px" /></td>');
-  }
-  for(var k = arrayGroup[i].length; k < MAX_ARRAY_LENGTH; k++) {
-    document.write('<td id="cell' + i + j);
-    if(bord == true) document.write('" style="border:solid #000000 1px');
-    document.write('" ><a href="selectletter(this.innerHTML);" id="anchor' +i+k+'" style="font-size: '+ KEY_SIZE + 'px;"></a>');
-    if(bord == true) document.write('<img src="files/spacer.GIF" width="' + width/85 + 'px" height="0px" />');
-    document.write('</td>');
   }
   document.write('</tr>');
   addToMemory(); //to update Memory's look on the screen.
 }
+
 //-->
 </script>
 </table>
